# ChangeLog for media-video/lives
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/lives/ChangeLog,v 1.7 2004/06/25 00:43:44 agriffis Exp $

*lives-0.8.5 (03 Jun 2004)

  03 Jun 2004; Luca Barbato <lu_zero@gentoo.org> +lives-0.8.5.ebuild:
  New version

  30 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> lives-0.8.1.ebuild:
  Adding amd64 keyword. Closing #44305.

*lives-0.8.1 (23 Dec 2003)

  23 Dec 2003; Luca Barbato <lu_zero@gentoo.org> lives-0.8.1.ebuild:
  New version

*lives-0.7.1 (03 Sep 2003)

  03 Sep 2003; Luca Barbato <lu_zero@gentoo.org>:
  Thanks to Ian Haylock <haylocki@v21mail.co.uk> for the initial ebuild.
