@@ -1,8 +1,10 @@
 MD5 8d6bd9bd11ba1430d13463f59fbddfb2 lives-0.8.1.ebuild 1193
-MD5 0eb12384d0e6d8cfcb9a55e03654de80 lives-0.8.5.ebuild 1626
-MD5 394e5084facdb529f2edacda9fdd720f lives-0.7.1.ebuild 1032
-MD5 7beda090cd7a1cda80871391d6c7d38e ChangeLog 695
+MD5 c0ab24640ecd91513be9a207f5685443 ChangeLog 807
 MD5 7a869ae1cd18658a7486607289aac4ca metadata.xml 221
+MD5 394e5084facdb529f2edacda9fdd720f lives-0.7.1.ebuild 1032
+MD5 30d43a0de0ef3fcc3bf3e0363723d04b lives-0.9.1.ebuild 1204
+MD5 0eb12384d0e6d8cfcb9a55e03654de80 lives-0.8.5.ebuild 1626
 MD5 2a440292415e6970c054d5b0fd0a2398 files/digest-lives-0.7.1 68
 MD5 c91e14653dd56cec040e0c713525d5dc files/digest-lives-0.8.1 135
 MD5 14c653499dd72251adf4c09b5c57f6b3 files/digest-lives-0.8.5 68
+MD5 1b0651671174c9538041c40633dc0558 files/digest-lives-0.9.1 69
