@@ -1,6 +1,11 @@
 # ChangeLog for media-video/lives
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/lives/ChangeLog,v 1.7 2004/06/25 00:43:44 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/lives/ChangeLog,v 1.8 2004/12/16 14:25:22 lu_zero Exp $
+
+*lives-0.9.1 (16 Dec 2004)
+
+  16 Dec 2004; Luca Barbato <lu_zero@gentoo.org> +lives-0.9.1.ebuild:
+  New version
 
 *lives-0.8.5 (03 Jun 2004)
 
